# quick_fact

./: .editorconfig  .gitignore  .pdm-python  facts.py  pyproject.toml
