[project]
name = "facts"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dmytro Bobylov", email = "dimas.od@gmail.com"},
]
dependencies = [
    "keyboard>=0.13.5",
    "requests>=2.31.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
